@@ -33,6 +33,9 @@
    - stevesk@cvs.openbsd.org 2005/10/13 22:24:31
      [auth2-gss.c gss-genr.c gss-serv.c monitor.c]
      KNF; ok djm@
+   - stevesk@cvs.openbsd.org 2005/10/14 02:17:59
+     [ssh-keygen.c ssh.c sshconnect2.c]
+     no trailing "\n" for log functions; ok djm@
 
 20051102
  - (dtucker) [openbsd-compat/bsd-misc.c] Bug #1108: fix broken strdup().
